// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tokens /> Renders loading screen 1`] = `
<Fragment>
  <PageHeader>
    <Breadcrumbs
      path={
        Array [
          Object {
            "label": "Downloads",
            "path": "/downloads",
          },
          Object {
            "label": "OpenShift Cluster Manager API Token",
          },
        ]
      }
    />
    <PageHeaderTitle
      title="OpenShift Cluster Manager API Token"
    />
  </PageHeader>
  <PageSection>
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Card
          className="ocm-c-api-token__card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
            >
              Connect with offline tokens
            </Title>
          </CardTitle>
          <CardBody
            className="ocm-c-api-token__card--body"
          >
            <TextContent>
              <Text
                component="p"
              >
                Red Hat OpenShift Cluster Manager is a managed service that makes it easy for you to use OpenShift without needing to install or upgrade your own OpenShift (Kubernetes) cluster.
              </Text>
              <Title
                headingLevel="h3"
              >
                Your API token
              </Title>
              <Text
                component="p"
              >
                Use this API token to authenticate against your Red Hat OpenShift Cluster Manager account.
              </Text>
              <Skeleton
                isDark={false}
                size="md"
              />
              <Title
                headingLevel="h3"
              >
                Using your token in the command line
              </Title>
              <List
                component="ol"
              >
                <ListItem>
                  Download and install the
                   
                  <ExternalLink
                    href="https://github.com/openshift-online/ocm-cli/releases/latest"
                    noIcon={true}
                  >
                    ocm command-line tool
                  </ExternalLink>
                   
                  <Oa
                    position={1}
                  />
                </ListItem>
                <ListItem>
                  Copy and paste the authentication command in your terminal:
                </ListItem>
              </List>
              <Skeleton
                isDark={false}
                size="md"
              />
              <Title
                headingLevel="h3"
              >
                Need help connecting with your offline token?
              </Title>
              <Text
                component="p"
              >
                Run
                 
                <code>
                  ocm
                   
                  login --help
                </code>
                 
                for in-terminal guidance, or
                 
                <ExternalLink
                  href="https://access.redhat.com/articles/6114701"
                  noIcon={true}
                >
                  read more about setting up the ocm CLI
                </ExternalLink>
                 
                for more information about setting up the
                 
                <code>
                  ocm
                </code>
                 
                CLI.
              </Text>
            </TextContent>
          </CardBody>
        </Card>
      </StackItem>
      <StackItem>
        <Card
          className="ocm-c-api-token__card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
            >
              Revoke previous tokens
            </Title>
          </CardTitle>
          <CardBody
            className="ocm-c-api-token__card--body"
          >
            <TextContent>
              <Text>
                To manage and revoke previous tokens:
              </Text>
              <List
                component="ol"
              >
                <ListItem>
                  Navigate to the
                   
                  <ExternalLink
                    href="https://sso.redhat.com/auth/realms/redhat-external/account/applications"
                  >
                    <b>
                      offline API token management
                    </b>
                  </ExternalLink>
                   
                  page.
                </ListItem>
                <ListItem>
                  Locate the
                   
                  <b>
                    cloud-services
                  </b>
                   
                  application.
                </ListItem>
                <ListItem>
                  Select
                   
                  <b>
                    Revoke grant
                  </b>
                  .
                </ListItem>
              </List>
              <Text>
                Refresh tokens will stop working immediately after you revoke them, but existing access tokens may take up to 15 minutes to expire.
              </Text>
              <Text>
                Refreshing this page will generate a new token.
              </Text>
            </TextContent>
          </CardBody>
        </Card>
      </StackItem>
    </Stack>
  </PageSection>
</Fragment>
`;

exports[`<Tokens /> Renders screen with button 1`] = `
<Fragment>
  <PageHeader>
    <Breadcrumbs
      path={
        Array [
          Object {
            "label": "Downloads",
            "path": "/downloads",
          },
          Object {
            "label": "OpenShift Cluster Manager API Token",
          },
        ]
      }
    />
    <PageHeaderTitle
      title="OpenShift Cluster Manager API Token"
    />
  </PageHeader>
  <PageSection>
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Card
          className="ocm-c-api-token__card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
            >
              Connect with offline tokens
            </Title>
          </CardTitle>
          <CardBody
            className="ocm-c-api-token__card--body"
          >
            <TextContent>
              <Text
                component="p"
              >
                Red Hat OpenShift Cluster Manager is a managed service that makes it easy for you to use OpenShift without needing to install or upgrade your own OpenShift (Kubernetes) cluster.
              </Text>
              <Title
                headingLevel="h3"
              >
                Your API token
              </Title>
              <Text
                component="p"
              >
                Use this API token to authenticate against your Red Hat OpenShift Cluster Manager account.
              </Text>
              <Link
                to="/token/show"
              >
                <Button
                  onClick={[Function]}
                  variant="primary"
                >
                  Load token
                </Button>
              </Link>
            </TextContent>
          </CardBody>
        </Card>
      </StackItem>
      <StackItem>
        <Card
          className="ocm-c-api-token__card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
            >
              Revoke previous tokens
            </Title>
          </CardTitle>
          <CardBody
            className="ocm-c-api-token__card--body"
          >
            <TextContent>
              <Text>
                To manage and revoke previous tokens:
              </Text>
              <List
                component="ol"
              >
                <ListItem>
                  Navigate to the
                   
                  <ExternalLink
                    href="https://sso.redhat.com/auth/realms/redhat-external/account/applications"
                  >
                    <b>
                      offline API token management
                    </b>
                  </ExternalLink>
                   
                  page.
                </ListItem>
                <ListItem>
                  Locate the
                   
                  <b>
                    cloud-services
                  </b>
                   
                  application.
                </ListItem>
                <ListItem>
                  Select
                   
                  <b>
                    Revoke grant
                  </b>
                  .
                </ListItem>
              </List>
              <Text>
                Refresh tokens will stop working immediately after you revoke them, but existing access tokens may take up to 15 minutes to expire.
              </Text>
              <Text>
                Refreshing this page will generate a new token.
              </Text>
            </TextContent>
          </CardBody>
        </Card>
      </StackItem>
    </Stack>
  </PageSection>
</Fragment>
`;

exports[`<Tokens /> Renders token 1`] = `
<Fragment>
  <PageHeader>
    <Breadcrumbs
      path={
        Array [
          Object {
            "label": "Downloads",
            "path": "/downloads",
          },
          Object {
            "label": "OpenShift Cluster Manager API Token",
          },
        ]
      }
    />
    <PageHeaderTitle
      title="OpenShift Cluster Manager API Token"
    />
  </PageHeader>
  <PageSection>
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Card
          className="ocm-c-api-token__card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
            >
              Connect with offline tokens
            </Title>
          </CardTitle>
          <CardBody
            className="ocm-c-api-token__card--body"
          >
            <TextContent>
              <Text
                component="p"
              >
                Red Hat OpenShift Cluster Manager is a managed service that makes it easy for you to use OpenShift without needing to install or upgrade your own OpenShift (Kubernetes) cluster.
              </Text>
              <Title
                headingLevel="h3"
              >
                Your API token
              </Title>
              <Text
                component="p"
              >
                Use this API token to authenticate against your Red Hat OpenShift Cluster Manager account.
              </Text>
              <Skeleton
                isDark={false}
                size="md"
              />
              <Title
                headingLevel="h3"
              >
                Using your token in the command line
              </Title>
              <List
                component="ol"
              >
                <ListItem>
                  Download and install the
                   
                  <ExternalLink
                    href="https://github.com/openshift-online/ocm-cli/releases/latest"
                    noIcon={true}
                  >
                    ocm command-line tool
                  </ExternalLink>
                   
                  <Oa
                    position={1}
                  />
                </ListItem>
                <ListItem>
                  Copy and paste the authentication command in your terminal:
                </ListItem>
              </List>
              <Skeleton
                isDark={false}
                size="md"
              />
              <Title
                headingLevel="h3"
              >
                Need help connecting with your offline token?
              </Title>
              <Text
                component="p"
              >
                Run
                 
                <code>
                  ocm
                   
                  login --help
                </code>
                 
                for in-terminal guidance, or
                 
                <ExternalLink
                  href="https://access.redhat.com/articles/6114701"
                  noIcon={true}
                >
                  read more about setting up the ocm CLI
                </ExternalLink>
                 
                for more information about setting up the
                 
                <code>
                  ocm
                </code>
                 
                CLI.
              </Text>
            </TextContent>
          </CardBody>
        </Card>
      </StackItem>
      <StackItem>
        <Card
          className="ocm-c-api-token__card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
            >
              Revoke previous tokens
            </Title>
          </CardTitle>
          <CardBody
            className="ocm-c-api-token__card--body"
          >
            <TextContent>
              <Text>
                To manage and revoke previous tokens:
              </Text>
              <List
                component="ol"
              >
                <ListItem>
                  Navigate to the
                   
                  <ExternalLink
                    href="https://sso.redhat.com/auth/realms/redhat-external/account/applications"
                  >
                    <b>
                      offline API token management
                    </b>
                  </ExternalLink>
                   
                  page.
                </ListItem>
                <ListItem>
                  Locate the
                   
                  <b>
                    cloud-services
                  </b>
                   
                  application.
                </ListItem>
                <ListItem>
                  Select
                   
                  <b>
                    Revoke grant
                  </b>
                  .
                </ListItem>
              </List>
              <Text>
                Refresh tokens will stop working immediately after you revoke them, but existing access tokens may take up to 15 minutes to expire.
              </Text>
              <Text>
                Refreshing this page will generate a new token.
              </Text>
            </TextContent>
          </CardBody>
        </Card>
      </StackItem>
    </Stack>
  </PageSection>
</Fragment>
`;
